# src/Travelio.Application/DTOs/PreBookingRequestDto.cs
@@ -1,10 +1,11 @@
+using System.ComponentModel.DataAnnotations;
+
 namespace Travelio.Application.DTOs
 {
     public class PreBookingRequestDto
     {
-        public string ClientId { get; set; }
-        public string OfferId { get; set; }
-        public string SearchId { get; set; }
-        public int? HoldTimeSeconds { get; set; }
+        [Required] public string ClientId { get; set; } = null!;
+        [Required] public string OfferId { get; set; } = null!;
+        public string? SearchId { get; set; }
     }
 }
