# src/Travelio.Application/DTOs/SearchResponseDto.cs
@@ -4,8 +4,8 @@ namespace Travelio.Application.DTOs
 {
     public class SearchResponseDto
     {
-        public string SearchId { get; set; }
-        public List<OfferDto> Offers { get; set; }
+        public string SearchId { get; set; } = null!;
+        public List<OfferDto> Offers { get; set; } = [];
         public int CacheTtlSeconds { get; set; }
     }
 }
